--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>headings</h1>
+    <h2>first</h2>
+    <h2>second</h2>
+    <h2>third</h2>
+    <h2>fourth</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam ullam id voluptatum reiciendis, impedit animi delectus quis aliquam at perspiciatis sed tenetur ex consectetur modi harum praesentium excepturi voluptates hic.</p>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia sunt, molestias laudantium, voluptate dolores reiciendis nihil provident excepturi beatae iste fugiat quam quaerat animi enim voluptatibus adipisci veritatis exercitationem dolore.</p>
 </body>
